style.css
body {
    display: flex;
    flex-direction: column;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #F9FAF8;
    background-color: #1F2937;
    margin: 0;
    min-height: 100vh;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 48px;
    padding: 10px 200px;
}

img {
    flex: 1;
    max-width: 300px;
    min-height: 225px;
    border-radius: 0.375rem;
    border-color: #3882F6;
    border-width: 5px;
}

.logoimg {
    flex: 1;
    width: 300px;
    min-height: 150px;
    border-radius: 0.375rem;
    border-color: #3882F6;
    border-width: 5px;
}

.hrimg {
    flex: 1;
    min-width: 800px;
    border-radius: 0.375rem;
    border-color: #3882F6;
    border-width: 5px;
}

.subtxt{
    color: #E5E7EB;
    font-size: 18px;
}

ul {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
    gap: 30px;
}

li {
    text-decoration: none;
    font-size: inherit;
    color: inherit;
}

a {
    cursor: pointer;
}

.contenta {
    flex: 1;
    display: flex;
    margin-bottom: 48px;
    padding: 10px 200px;
}

.heroic {
    flex: 1;
}

.hero {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.logo{
    display: flex;
    font-family: inherit;
    color: #F9FAF8;
    font-size: 24px;
    width: 300px;
    height: 150px;
}

.maintxt{
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
}

button {
    flex-grow: 0;
    background-color: #3882F6;
    color: #E5E7EB;
    border-radius: 0.375rem;
    border: none;
    outline-color: #E5E7EB;
    outline-width: 5px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 18px;
    font-weight: 600;
    margin-top: 15px;
    padding: 5px 25px;
    cursor: pointer;
}

.heroimg {
    flex: 1;
}

.contentb {
    flex: 1;
    background-color: #E5E7EB;
    display: flex;
    padding: 10px 200px;
    text-align: center;
}

.randominfo {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.infoheader {
    color: #1F2937;
    font-size: 36px;
    weight: 900;
}

.gallery {
    display: flex;
    justify-content: center;
    gap: 52px;
    margin-top: 32px;
}

.info {
    max-width: 300px;
}

.text {
    color: #1F2937;
}

.contentc {
 
    color: #1F2937;
}

.contentc {
    background-color: #E5E7EB;
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px 200px;
}

.quotes {
    display: flex;
    flex-direction: column;
}

.quotetxt {
    color: #1F2937;
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
}

.quotename {
    color: #1F2937;
    font-size: 24px;
    font-weight: 900;
    font-style: bold;
    align-self: flex-end;
}

.contentd {
    flex: 1;
    background-color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 48px;
    padding: 10px 200px;
}

.call {
    background-color: #3882F6;
    border-radius: 0.375rem;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 48px 96px;
}

.signup {
    border-color:#E5E7EB;
    border-width: 2px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 50px;
}

